--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "datacite-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Kristian Garza <kj.garza@gmail.com> (https://github.com/kjgarza)",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "main": "dist/datacite-components.min.js",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.4",
@@ -55,5 +57,11 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "homepage": "https://github.com/kjgarza/datacite-components/#README.md",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kjgarza/datacite-components.git"
+  }
 }
