--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
-    "data-metrics-badge": "^0.2.1",
+    "data-metrics-badge": "datacite/spitz#master",
     "kitsu": "^7.1.0",
     "vue": "^2.6.10",
-    "vuejs-paginate": "^2.1.0"
+    "vuejs-paginate": "^2.1.0",
+    "canvas-prebuilt": "^1.6.11"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -28,13 +29,15 @@
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
+    "jquery": "1.9.1 - 3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "mutationobserver-shim": "^0.3.3",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.4",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
+    "webpack": "^4.36.0",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-template-compiler": "^2.6.10"
   },
