--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "@vue/cli-plugin-unit-mocha": "^4.0.5",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
     "jquery": "1.9.1 - 3",
@@ -37,6 +38,7 @@
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.4",
     "sass-loader": "^8.0.0",
+    "mocha": "^5.2.0",
     "webpack": "^4.36.0",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-template-compiler": "^2.6.10"
