--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
+    "canvas-prebuilt": "^1.6.11",
     "core-js": "^3.3.2",
     "data-metrics-badge": "datacite/spitz#master",
     "kitsu": "^7.1.0",
     "vue": "^2.6.10",
-    "vuejs-paginate": "^2.1.0",
-    "canvas-prebuilt": "^1.6.11"
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.6.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
     "@vue/cli-plugin-unit-mocha": "^4.0.5",
+    "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
-    "jquery": "1.9.1 - 3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "1.9.1 - 3",
+    "mocha": "^5.2.0",
     "mutationobserver-shim": "^0.3.3",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.4",
     "sass-loader": "^8.0.0",
-    "mocha": "^5.2.0",
-    "webpack": "^4.36.0",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.36.0"
   },
   "eslintConfig": {
     "root": true,
