--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "files": [
@@ -32,6 +33,9 @@
     "bootstrap": "^4.3.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "axios-mock-adapter": "latest",
+    "chai": "^4.1.2",
     "jquery": "1.9.1 - 3",
     "mocha": "^5.2.0",
     "mutationobserver-shim": "^0.3.3",
