--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-unit-mocha": "^4.0.5",
     "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "bootstrap": "^4.3.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "axios-mock-adapter": "latest",
+    "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.3.1",
     "chai": "^4.1.2",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-vue": "^6.0.1",
     "jquery": "1.9.1 - 3",
     "mocha": "^5.2.0",
     "mutationobserver-shim": "^0.3.3",
