--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
        "parser": "babel-eslint"
    },
   "extends": [
+      "eslint:recommended",
       "airbnb-base",
       "plugin:vue/recommended"
   ],
